Fix cropped avatar

--- a/src/pages/catchup.css
+++ b/src/pages/catchup.css
@@ -666,6 +666,7 @@
         black calc(100% - 1em),
         transparent 100%
       );
+      padding-top: 0.1em;
 
       @media (min-width: 40em) {
         --width: 25vw;
